syntax = "proto3";

option optimize_for = SPEED;
option go_package = "./vearchpb";
package vearchpb;

// snapshot msg
message SnapshotMsg {
    // absolute file name
    string file_name = 1;
    // file info
    bytes data = 2;
    // status
    SnapshotStatus status = 3;
}

//snapshot status
enum SnapshotStatus {
    UnUse = 0;//
    Start = 1;// start
    Running = 2;// running
    Finish = 3;// finish
}
